{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 26,
  "lineage": "4048d4fc-ff1d-1325-00a2-20738f13c43a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:loadbalancer/app/test-lb-tf/86a0e5f1dd1b3c50",
            "arn_suffix": "app/test-lb-tf/86a0e5f1dd1b3c50",
            "dns_name": "test-lb-tf-1465598057.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:loadbalancer/app/test-lb-tf/86a0e5f1dd1b3c50",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0a113e01a357cb5b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ebae2b3554205ca"
              },
              {
                "subnet_id": "subnet-0ae129209eee6c06f"
              },
              {
                "subnet_id": "subnet-0f28c2f3c89859d43"
              }
            ],
            "subnets": [
              "subnet-07ebae2b3554205ca",
              "subnet-0ae129209eee6c06f",
              "subnet-0f28c2f3c89859d43"
            ],
            "vpc_id": "vpc-0794d2a5fc354348f",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:subnet/subnet-0f28c2f3c89859d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-0f28c2f3c89859d43",
            "map_public_ip_on_launch": true,
            "owner_id": "383457960316",
            "vpc_id": "vpc-0794d2a5fc354348f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:subnet/subnet-0ae129209eee6c06f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-0ae129209eee6c06f",
            "map_public_ip_on_launch": true,
            "owner_id": "383457960316",
            "vpc_id": "vpc-0794d2a5fc354348f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:subnet/subnet-07ebae2b3554205ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-07ebae2b3554205ca",
            "map_public_ip_on_launch": true,
            "owner_id": "383457960316",
            "vpc_id": "vpc-0794d2a5fc354348f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:vpc/vpc-0794d2a5fc354348f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0004c25ae8666c23f",
            "default_route_table_id": "rtb-0b3972ef449e7fe82",
            "default_security_group_id": "sg-0e543b90ce70c0b2b",
            "dhcp_options_id": "dopt-0e9f757d9e2d11c4b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0794d2a5fc354348f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b3972ef449e7fe82",
            "owner_id": "383457960316"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:listener/app/test-lb-tf/86a0e5f1dd1b3c50/3480dc07e7d68524",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:targetgroup/target-group/d05d333cc18a604b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:listener/app/test-lb-tf/86a0e5f1dd1b3c50/3480dc07e7d68524",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:loadbalancer/app/test-lb-tf/86a0e5f1dd1b3c50",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:targetgroup/target-group/d05d333cc18a604b",
            "arn_suffix": "targetgroup/target-group/d05d333cc18a604b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:383457960316:targetgroup/target-group/d05d333cc18a604b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0794d2a5fc354348f"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:security-group/sg-0a113e01a357cb5b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a113e01a357cb5b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220501203725646100000001",
            "name_prefix": null,
            "owner_id": "383457960316",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0794d2a5fc354348f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383457960316:security-group/sg-0bd5bec9a5eaa1d14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd5bec9a5eaa1d14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a113e01a357cb5b8"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220501204642280400000001",
            "name_prefix": null,
            "owner_id": "383457960316",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0794d2a5fc354348f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}